--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aedes": "^0.50.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "mqtt": "^5.3.4",
+    "precompiled-mqtt": "^4.3.14-beta",
+    "socket.io": "^4.7.3"
   }
 }
