--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.13.0",
     "mqtt": "^5.3.4",
     "precompiled-mqtt": "^4.3.14-beta",
