--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.3",
     "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34",
     "yup": "^1.3.3"
   },
   "scripts": {
