--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "mqtt": "^5.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.3",
