dodanie uwierzytelniania poprzez JWT & poprawa logiki aplikacji

--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mqtt": "^5.3.4",
     "precompiled-mqtt": "^4.3.14-beta",
     "socket.io": "^4.7.3",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "yup": "^1.7.0"
   }
 }
